style.css
body{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Lato', sans-serif;

}
.f-bold{
    font-weight: bold;
}

h1{
    font-size: 50px;
    font-weight: 600;
}
h2{
    font-size: 35px;
    font-weight: 600;
}
p{
    font-size: 18px;
    line-height: 25px;
    margin: 2rem 0;
}
a{
    text-decoration: none;
}
section{
    padding: 2% 8%;
}

.flex-container{
    display: flex;
    align-items: center;
    justify-content: center;

}

.heading-text{
    padding-left:10px;
    border-left:5px solid #fc0069;
}

.w-50{
    width: 50%;
    padding: 2%;
    
}
.text-center{
    text-align: center;
}
.w-50 img{
    width: 75%;
    
}

.orange-text{
    color:#ffad5a;
}

.btn-links {
    padding: 10px 20px;
    background: #fc0069;
    color: #fff;
    border-radius: 5px;
}

/* My Mission section */
.card{
    width:18rem;
    padding: 15px;
    margin: 5px 35px;
    border-radius: 25px;
}
.bg-1{
    background: #dde9f0;
}
.bg-2{
    background: #f5e6e6;
}
.bg-3{
    background: #f8f4e2;
}
.card img{
    width: 35%;
}
.card p{
    font-size: 14px;
    margin: 5px 0;
}

/* Projects */
.projects{
    width: 30%;
    margin: 10px;
    padding: 10px;
    
}

.projects img{
    width: 100%;
    border: 2px solid #ffad5a;
    border-radius:10px;
    transition: all 0.2s ease-in-out;
}
.projects img:hover{
    transform: scale(1.05);
}
.project-tags{
    margin: 5px 2px;
}
span.badge {
    padding: 2px 5px;
    margin: 2px;
    background: #fc0069;
    color: #fff;
    font-size: 12px;
    border-radius: 10px;
}

footer{
    background-color: rgb(2, 2, 24);
    padding:1% 5%;
    color: #fff;
}
.footer-title{
    color: #fff;
    font-size: 32px;
    font-family: cursive;
}

